FlowAggregatorTest cleanup